--- a/nodejslogin/html_pages/homepage.css
+++ b/nodejslogin/html_pages/homepage.css
@@ -8,14 +8,34 @@ body {
     background-attachment: fixed;
     background-image: url("https://cdn.discordapp.com/attachments/927807364835455027/930769296349626388/wp6144011-lego-minecraft-wallpapers.png");
 }
+#textbox, #tagname {
+    padding: 10px;
+    margin-top: -1em;
+}
+#tagsubmit {
+    padding: 0px 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
 
+#tagimg {
+    width: 100%; height: 100%;
+    margin-top: -10px;
+}
+#playername {
+    font-size: 20px;
+    text-decoration: underline;
+}
+#test h5 {
+    margin-top: -20px;
+}
 /* The entire area from web banner down to footer */
 .wrapper {
     width: 940px;
     margin: 20px auto 20px auto;
     border: 0px solid #000000;
     background-color: #ffffff;
-    opacity: 90%;
+    opacity: 99%;
 }
 
 header {
@@ -84,10 +104,10 @@ aside section a {
     padding: 10px;
     border-bottom: 1px solid #eeeeee;
 }
-aside section a:hover {
+/* aside section a:hover {
     color: #985d6a;
     background-color: #efefef;
-}
+} */
 a {
     color: #de6581;
     text-decoration: #efefef;
@@ -381,10 +401,6 @@ if from 0 to 10 however, will be extremely fast */
     height: inherit;
     border-radius: 12px;
     object-fit: cover;
-  }
-  .card:hover {
-    transform: scale(0.95, 0.95);
-    box-shadow: 5px 5px 15px 15px rgba(0,0,0,0.25);
   }
 
   .title-white {
